# workflow-station

./: .gitignore  BACKEND_OVERVIEW.md  CODEBASE_ANALYSIS.md
.docs/: ENDPOINT_FEATURE_SUMMARY.md  SAMPLE_WORKFLOWS.md  STEP_CONFIGURATIONS.md
.envs/: .cursorignore
endpoints-workers/: README.md  deploy-all.sh
py-workflow-engine/workflow-engine/: .gitignore  FIX_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  dag_executor.py  notification_handler.py  pyproject.toml  step_processor.py  utils.py  workflow_engine.py
workflow-engine/: CONDITIONAL_LOGIC_USAGE.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
workflow-engine-ui/: README.md  package-lock.json  package.json
workflow-engine-ui/app/: layout.tsx  page.tsx
workflow-engine/.wrangler/tmp/bundle-JhwIf5/: middleware-insertion-facade.js  middleware-loader.entry.ts
workflow-engine/.wrangler/tmp/bundle-WhCXnJ/: middleware-insertion-facade.js  middleware-loader.entry.ts
workflow-engine/.wrangler/tmp/dev-haaqvZ/: index.js  index.js.map
workflow-engine/.wrangler/tmp/dev-mvT57O/: index.js  (+1 more)
workflow-engine/src/: index.ts  types.ts
workflow-engine/src/providers/: anthropic.ts  index.ts  openai.ts
workflow-engine/src/steps/: agent-step.ts  endpoint-step.ts  index.ts  llm-step.ts  router-step.ts  thread-step.ts
workflow-engine/src/utils/: condition.ts
workflow-flow-ui/: package-lock.json  package.json
workflow-flow-ui/app/: layout.tsx  node-context.tsx  page.tsx  types.ts
workflow-flow-ui/components/: base-node.tsx  node-menu.tsx
workflow-flow-ui/components/ui/: dialog.tsx
