[project]
name = "objspace-workflow-engine"
version = "0.1.0"
description = "DAG-based workflow execution engine for ObjSpace"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "modal>=0.65.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "upstash-redis>=1.5.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "*.py",
    "payloads/*.json"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
]

